# aspnetcore/src/IO.Swagger/Models/Links.cs
@@ -1,0 +1,105 @@
+/*
+ * Health-check API
+ *
+ * Health-check API  See: [https://tools.ietf.org/html/draft-inadarei-api-health-check-04#section-3.8]() 
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: you@your-company.com
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+    /// <summary>
+    /// (optional) is an object containing link relations and URIs [RFC3986] for external links that MAY contain more information about the health of the endpoint.  All values of this object SHALL be URIs. Keys MAY also be URIs.  Per web-linking standards [RFC8288] a link relationship SHOULD either be a common/registered one or be indicated as a URI, to avoid name clashes.  If a \&quot;self\&quot; link is provided, it MAY be used by clients to check health via HTTP response code, as mentioned above. 
+    /// </summary>
+    [DataContract]
+    public partial class Links : Dictionary<String, string>, IEquatable<Links>
+    { 
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class Links {\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public  new string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (ReferenceEquals(null, obj)) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((Links)obj);
+        }
+
+        /// <summary>
+        /// Returns true if Links instances are equal
+        /// </summary>
+        /// <param name="other">Instance of Links to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(Links other)
+        {
+            if (ReferenceEquals(null, other)) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return false;
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(Links left, Links right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(Links left, Links right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
