# aspnetcore/src/IO.Swagger/Models/Status.cs
@@ -1,0 +1,45 @@
+/*
+ * Health-check API
+ *
+ * Health-check API  See: [https://tools.ietf.org/html/draft-inadarei-api-health-check-04#section-3.8]() 
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: you@your-company.com
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+
+namespace IO.Swagger.Models
+{ 
+        /// <summary>
+        /// status (optional) has the exact same meaning as the top-level \"output\" element, but for the sub-component/downstream dependency represented by the details object. 
+        /// </summary>
+        /// <value>status (optional) has the exact same meaning as the top-level \"output\" element, but for the sub-component/downstream dependency represented by the details object. </value>
+        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
+        public enum Status
+        {
+            /// <summary>
+            /// Enum PassEnum for pass
+            /// </summary>
+            [EnumMember(Value = "pass")]
+            PassEnum = 0,
+            /// <summary>
+            /// Enum FailEnum for fail
+            /// </summary>
+            [EnumMember(Value = "fail")]
+            FailEnum = 1,
+            /// <summary>
+            /// Enum WarnEnum for warn
+            /// </summary>
+            [EnumMember(Value = "warn")]
+            WarnEnum = 2        }
+}
